# calamares-branding

./: CMakeLists.txt  README.md
.tx/: config
debian/: changelog  control  preinst  prerm  rules
etc/: settings.conf
etc/calamares/branding/netrunner-debian/: branding.desc  show.qml
etc/calamares/branding/netrunner-debian/lang/: calamares-netrunner-debian_en.ts
etc/skel/Desktop/: calamares.desktop
netrunner-debian/: branding.desc  show.qml
